criando nova cotação de ars

--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
       </div>
     </article>
 
+    <article class="dadosArs">
+      <div class="grafico">
+        <div class="grafico__titulo">
+          <span class="grafico__ilustracao-ars"></span>
+          <h2>Variação da moeda desde o login</h2>
+        </div>
+          <canvas id="graficoArs"></canvas>
+      </div>
+
+      <div class="investimentos">
+        <h2>Valores da moeda</h2>
+        <ul class="investimentos__lista" id="ars" data-lista>
+        </ul>
+      </div>
+    </article>
+
     <footer class="rodape">
       <p>Dashboard - Desenvolvido por Alura</p>
     </footer>
