Cotaçaõ de ars e ajustes no css finalizados

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 <body class="container">
   <aside class="sidebar">
     <img src="./imagens/logo.png" alt="Logo do bytebank" />
-    <img src="./imagens/avatar.png" alt="Avatar do usuário" class="sidebar__avatar" />
-    <h2>Moni Hillman</h2>
-    <hr class="sidebar__linha" />
+    <img src="./imagens/icon-bank.png" alt="Avatar do usuário" class="sidebar__avatar" />
+    <h2></h2>
+   <!-- <hr class="sidebar__linha" />
     <nav class="sidebar__links">
       <a href="#"><span class="links__icone dashboard"></span>Dashboard</a>
       <a href="#"><span class="links__icone cofre">Investimentos</a>
       <a href="#"><span class="links__icone configuracao">Minha Conta</a>
       <a href="#"><span class="links__icone duvida">Dúvidas Frequentes</a>
-    </nav>
+    </nav>--> 
   </aside>
 
   <main class="dados">
     <header class="cabecalho">
-      <h2>Olá, Moni! Estes são os detalhes da sua cotação:</h2>
+      <h2>Acompanhe a cotação de moedas em tempo real</h2>
     </header>
 
     <article class="dadosDolar">
@@ -79,7 +79,7 @@
     </article>
 
     <footer class="rodape">
-      <p>Dashboard - Desenvolvido por Alura</p>
+      <p></p>
     </footer>
   </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
